alb.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: "None"

# ============================================================#
# Parameters to be input from console
# ============================================================#
Parameters:
  ProjectPrefix:
    Type: "String"
    AllowedPattern: ".+"
    Description: "(Required) This value will be used as prefix of created resources."
    ConstraintDescription: "\"ProjectPrefix\"is required and must match pattern \".+\"."
  VPCStackName:
    Description: "Stack name of VPC to place the resources of this template"
    Type: "String"
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: "AWS::EC2::KeyPair::KeyName"
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  InstanceType:
    Description: WebServer EC2 instance type
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.nano
      - t2.micro
    ConstraintDescription: must be a valid EC2 instance type.
  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 58.158.165.10/32
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.


# ============================================================#
# Value sets to be used in this template
# ============================================================#
Mappings:
  AWSInstanceType2Arch:
    t2.nano:
      Arch: HVM64
    t2.micro:
      Arch: HVM64
  AWSInstanceType2NATArch:
    t2.nano:
      Arch: NATHVM64
    t2.micro:
      Arch: NATHVM64
  AWSRegionArch2AMI:
    ap-northeast-1:
      HVM64: ami-077527e5c50f1d6d1
      HVMG2: ami-09d0e0e099ecabba2
    ap-northeast-2:
      HVM64: ami-0493ab99920f410fc
      HVMG2: NOT_SUPPORTED
    ap-northeast-3:
      HVM64: ami-01344f6f63a4decc1
      HVMG2: NOT_SUPPORTED


# ============================================================#
# Resources to be created from this template
# ============================================================#
Resources:

  # ----------------------------------------------------------#
  # Define EC2 Instance
  # ----------------------------------------------------------#
  MyFirstEC2Instance: 
    Type: "AWS::EC2::Instance"
    Properties:
      ImageId: "ami-0d864b69bc8b30198"
      InstanceType: !Ref "InstanceType"
      SubnetId: 
        Fn::ImportValue : !Sub "${ProjectPrefix}-${VPCStackName}-PublicSubnet1"
      SecurityGroupIds: 
        - !Ref "InstanceSecurityGroup"
      KeyName: !Ref "KeyName"
      UserData: !Base64 
        'Fn::Join':
          - ""
          - - IPAddress=
            - !Ref "MyFirstElasticIP"
      Tags:
        - Key: "Name"
          Value: !Sub "${ProjectPrefix}-${AWS::StackName}-EC2"
  MyFirstElasticIP:
    Type: "AWS::EC2::EIP"
  EC2IPAssoc:
    Type: "AWS::EC2::EIPAssociation"
    Properties:
      InstanceId: !Ref "MyFirstEC2Instance"
      EIP: !Ref "MyFirstElasticIP"

  # ----------------------------------------------------------#
  # Define Security Groups
  # ----------------------------------------------------------#
  InstanceSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Enable SSH access via port 22"
      VpcId:
        Fn::ImportValue : !Sub "${ProjectPrefix}-${VPCStackName}-VPC"
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: "22"
          ToPort: "22"
          CidrIp: !Ref "SSHLocation"
        - IpProtocol: "tcp"
          FromPort: "80"
          ToPort: "80"
          SourceSecurityGroupId: !GetAtt ["ALBSecurityGroup", "GroupId"]
  ALBSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Enable HTTP access via port 80"
      VpcId:
        Fn::ImportValue: !Sub "${ProjectPrefix}-${VPCStackName}-VPC"
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: "80"
          ToPort: "80"
          CidrIp: "0.0.0.0/0"
        - IpProtocol: "tcp"
          FromPort: "443"
          ToPort: "443"
          CidrIp: "0.0.0.0/0"

  # ----------------------------------------------------------#
  # Define Target Group
  # ----------------------------------------------------------#
  TargetGroup:
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    Properties:
      VpcId:
        Fn::ImportValue: !Sub "${ProjectPrefix}-${VPCStackName}-VPC"
      Name: !Sub "${ProjectPrefix}-${AWS::StackName}-tg"
      Targets: 
        - Id: !Ref MyFirstEC2Instance
          Port: 80
#        - Id:
#          Port: 80
      Protocol: "HTTP"
      Port: "80"
      HealthCheckProtocol: "HTTP"
      HealthCheckPath: "/"
      HealthCheckPort: "traffic-port"
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 2
      HealthCheckTimeoutSeconds: 5
      HealthCheckIntervalSeconds: 10
      Matcher: 
        HttpCode: "200"
      Tags: 
        - Key: "Name"
          Value: !Sub "${ProjectPrefix}-${AWS::StackName}-tg"
      TargetGroupAttributes: 
        - Key: "deregistration_delay.timeout_seconds"
          Value: 300
        - Key: "stickiness.enabled"
          Value: false
        - Key: "stickiness.type"
          Value: "lb_cookie"
        - Key: "stickiness.lb_cookie.duration_seconds"
          Value: 86400

  # ----------------------------------------------------------#
  # Define ALB
  # ----------------------------------------------------------#
  InternetALB: 
    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
    Properties: 
      Name: !Sub "${ProjectPrefix}-${AWS::StackName}-ALB"
      Tags: 
        - Key: Name
          Value: !Sub "${ProjectPrefix}-${AWS::StackName}-ALB"
      Scheme: "internet-facing"
      LoadBalancerAttributes: 
        - Key: "deletion_protection.enabled"
          Value: false
        - Key: "idle_timeout.timeout_seconds"
          Value: 60
      SecurityGroups:
        - !Ref ALBSecurityGroup
      Subnets: 
        - Fn::ImportValue:
            !Sub "${ProjectPrefix}-${VPCStackName}-PublicSubnet1"
        - Fn::ImportValue:
            !Sub "${ProjectPrefix}-${VPCStackName}-PublicSubnet2"
        - Fn::ImportValue:
            !Sub "${ProjectPrefix}-${VPCStackName}-PublicSubnet3"
  ALBListener: 
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    Properties: 
      DefaultActions: 
        - TargetGroupArn: !Ref "TargetGroup"
          Type: forward
      LoadBalancerArn: !Ref "InternetALB"
      Port: 80
      Protocol: "HTTP"

# ============================================================#
# Interface of this template
# ============================================================#
# Outputs:
#  InstanceId:
#    Description: InstanceId of the newly created EC2 instance
#    Value: !Ref FirstEC2Instance
#  AZ:
#    Description: Availability Zone of the newly created EC2 instance
#    Value: !GetAtt 
#      - FirstEC2Instance
#      - AvailabilityZone
#  PublicDNS:
#    Description: Public DNSName of the newly created EC2 instance
#    Value: !GetAtt 
#      - FirstEC2Instance
#      - PublicDnsName
#  PublicIP:
#    Description: Public IP address of the newly created EC2 instance
#    Value: !GetAtt 
#      - FirstEC2Instance
#      - PublicIp
#  InstanceIPAddress:
#    Description: IP address of the newly created EC2 instance
#    Value: !Ref FirstIPAddress
